--- a/assets/details.html
+++ b/assets/details.html
@@ -43,7 +43,7 @@
         <section id="product-details-all">
         </section>
     </main>
-    <img id="floater" src="./assets/img/OKAY6Fl.png" alt="edyoda">
+    <img id="floater" src="/assets/img/OKAY6Fl.png" alt="edyoda">
 
     <footer id="footer">
         <div class="footer-containers">
