--- a/assets/checkout.html
+++ b/assets/checkout.html
@@ -52,7 +52,7 @@
             </div>
         </section>
     </main>
-    <img id="floater" src="/assets/img/OKAY6Fl.png" alt="edyoda">
+    <img id="floater" src="../assets/img/OKAY6Fl.png" alt="edyoda">
 
     <footer id="footer">
         <div class="footer-containers">
