--- a/assets/orderplaced.html
+++ b/assets/orderplaced.html
@@ -39,7 +39,7 @@
         <h1>Order Placed Successfully!!</h1>
         <h2>We have sent you an email with the order details</h2>
     </main>
-    <img id="floater" src="/assets/img/OKAY6Fl.png" alt="edyoda">
+    <img id="floater" src="../assets/img/OKAY6Fl.png" alt="edyoda">
 
     <footer id="footer">
         <div class="footer-containers">
